--- a/style.css
+++ b/style.css
@@ -4,11 +4,8 @@
 .vote-text{
 	position: absolute;
 }
-body{
-	margin-top: 5%;
-}
 nav{
-	position: absolute;
 	z-index: 100;
 	height: 8%;
+	width:100%;
 }
